--- a/client/partials/index.html
+++ b/client/partials/index.html
@@ -1,7 +1,7 @@
 <div ng-init=uc.reset() id="container">
   <div id="wrap"> 
     <form>
-        <label>Your Name: <input type="text" placeholder='Enter Username' ng-model='uc.user.username'></label>
+        <label>Your Name: <input type="text" ng-model='uc.user.username'></label>
       <button id= "btn" type="submit" ng-click='uc.register()' >Login</button>
     </form>
   </div>
